Advanced Search: Fix button spacing

--- a/scss/components/_advancedSearch.scss
+++ b/scss/components/_advancedSearch.scss
@@ -12,5 +12,9 @@
 	
 	#zotero-search-buttons {
 		margin: 3px 0;
+
+		button {
+			margin-inline-start: 6px;
+		}
 	}
 }
